<resources>
    <string name="app_name">Open GPS Tracker</string>
    <string name="service_start">Activating logging service</string>
    <string name="service_gpsstatus">Logging: %1$s (%2$s with %3$d satellites)</string>
    <string name="service_gpsnostatus">Logging: %1$s (Precision %2$s)</string>
    <string name="service_networkstatus">Logging: %1$s (%2$s with cell tower and wifi)</string>
    <string name="service_gpsdisabled">GPS is disabled, logging is without effect.</string>
    <string name="service_gpsenabled">GPS is enabled, commencing logging.</string>
    <string name="service_connectiondisabled">Network is disabled, network location logging is without effect.</string>
    <string name="service_datadisabled">Network positioning is disabled, logging is without effect.</string>
    <string name="service_dataenabled">Network positioning is enabled, commencing logging.</string>
    <string name="service_gpsproblem">Receiving no location information</string>
    <string name="dialog_select_media_title">Select note</string>
    <string name="dialog_select_media_message">Multiple notes were found at this location, please select one to open</string>
    <string name="dialog_tracking_title">Tracking control</string>
    <string name="dialog_routename_title">Name track</string>
    <string name="dialog_routename_message">Please enter the name of the track</string>
    <string name="dialog_routename_default">Track %1$tY-%2$tm-%3$td %4$tH:%5$tM</string>
    <string name="dialog_notrack_title">No track is selected</string>
    <string name="dialog_notrack_message">Please select a track first before exporting</string>
    <string name="dialog_delete_title">Delete track</string>
    <string name="dialog_delete_message">Please confirm the deletion of the track %s</string>
    <string name="dialog_nooiabout">OI About missing</string>
    <string name="dialog_nooiabout_message">The application \"OI About\" from the OpenIntents project is required to display the about information.</string>
    <string name="dialog_layer_title">Activate overlays</string>
    <string name="dialog_graphtype_title">Graph type</string>
    <string name="dialog_notetext_title">Text note</string>
    <string name="dialog_notetext_message">Enter a text note for the current location</string>
    <string name="dialog_notename_title">Mark</string>
    <string name="dialog_notename_message">Enter the name of this location</string>
    <string name="logcontrol_start">Start tracking</string>
    <string name="logcontrol_pause">Pause tracking</string>
    <string name="logcontrol_resume">Resume tracking</string>
    <string name="logcontrol_stop">Stop tracking</string>
    <string name="layer_regular">Normal map</string>
    <string name="layer_satellite">Satellite</string>
    <string name="layer_traffic">Traffic</string>
    <string name="layer_speed">Speed</string>
    <string name="layer_altitude">Altitude</string>
    <string name="layer_distance">Distance</string>
    <string name="layer_compass">Compass</string>
    <string name="layer_location">My Location</string>
    <string name="layer_cloudmade">CloudMade maps</string>
    <string name="layer_maknik">Mapnik</string>
    <string name="layer_bicycle">OpenCycleMap</string>
    <string name="dialog_vacuum_title">Crop data</string>
    <string name="dialog_vacuum_message">Returns space lost due to fragmentation by a rebuilding the database.</string>
    <string name="dialog_import_title">GPX import</string>
    <string name="dialog_import_message">Would you like to import the GPX %1$s ?</string>
    <string name="dialog_import_picker">Import GPX file</string>
    <string name="menu_picker">Import</string>
    <string name="dialog_nooipicker">OI File Manager</string>
    <string name="dialog_nooipicker_message">The application \"OI File Manager\" from the OpenIntents project is required to pick files. After accepting OI File Manager EULA the import button works.</string>
    <string name="dialog_contrib_title">Contribute</string>
    <string name="graphtype_timespeed">Speed over time</string>
    <string name="graphtype_timealtitude">Altitude over time</string>
    <string name="graphtype_distancespeed">Speed over distance</string>
    <string name="graphtype_distancealtitude">Altitude over distance</string>
    <string name="opengpstracker_title">Open GPS Tracker</string>
    <string name="preference_display">Display settings</string>
    <string name="preference_behavior">Run settings</string>
    <string name="logatstartup">Log at service start</string>
    <string name="logatstartup_summary">After starting, the logging service immediately records.</string>
    <string name="logatdock">Log at car docking</string>
    <string name="logatdock_summary">After inserting in a car dock, the logging immediately records.</string>
    <string name="stopatundock">Stop logging at undocking</string>
    <string name="stopatundock_summary">After exiting a dock, the logging immediately stops.</string>
    <string name="startupatboot">Start up at boot</string>
    <string name="startupatboot_summary">After starting the device, the logging service starts.</string>
    <string name="logatpowerconnected">Log when power is connected</string>
    <string name="logatpowerconnected_summary">After connecting to a power supply, the logging immediately starts.</string>
    <string name="stopatpowerdisconnected">Stop logging when power is disconnected</string>
    <string name="stopatpowerdisconnected_summary">After disconnecting from a power supply, the logging immediately stops.</string>
    <string name="disableblanking_title">Disable screen blanking</string>
    <string name="disableblanking_summary">Keeps the screen on during tracking.</string>
    <string name="disabledimming_title">Disable screen dimming</string>
    <string name="disabledimming_summary">Keeps the screen on full brightness during tracking.</string>
    <string name="precision_title">Logging precision</string>
    <string name="precision_summary">The size of interval between GPS fixes.</string>
    <string name="mapprovider_title">Map provider</string>
    <string name="mapprovider_summary">The source from which to retrieve mapdata.</string>
    <string name="trackcoloring_title">Track color</string>
    <string name="trackcoloring_summary">The coloring used to draw the track.</string>
    <string name="showspeed_title">GPS speed</string>
    <string name="showspeed_summary">Show the speed from the last received GPS fix.</string>
    <string name="showaltitude_title">GPS altitude</string>
    <string name="showaltitude_summary">Show the altitude from the last received GPS fix.</string>
    <string name="showdistance_title">Distance covered</string>
    <string name="showdistance_summary">Show the distance covered by the track.</string>
    <string name="showcompass_title">Compass</string>
    <string name="showcompass_summary">Show a compass with a needle pointing north</string>
    <string name="sanitycheck_title">Speed and altitude sanity check </string>
    <string name="sanitycheck_summary">Only accept reasonable GPS speeds and altitudes</string>
    <string name="showlocation_title">My location </string>
    <string name="showlocation_summary">Show my location on the map</string>
    <string name="units_title">Units</string>
    <string name="units_summary">Determine if metric or imperial units are used</string>
    <string name="units_implement_width_title">Implement width</string>
    <string name="units_implement_width_summary">Width of the implement the tractor is pulling</string>
    <string name="units_implement_width_message">The width of the implement the tractor is pulling or
     other machine that works/covers an area over a given time. For example, width of a swather. \n\n
Enter number of feet for acres/hour or meters for use in hectares/hour.\n </string>
    <string name="stat_maximumspeed">Maximum speed</string>
    <string name="stat_overallaveragespeed">Travel speed</string>
    <string name="stat_averagespeed">Average speed</string>
    <string name="stat_distance">Tracked distance</string>
    <string name="stat_endtime">Last time</string>
    <string name="stat_starttime">Start time</string>
    <string name="stat_waypoints">Waypoints</string>
    <string name="stat_elapsedtime">Elapsed</string>
    <string name="stat_ascension">Total elevation</string>
    <string name="preference_sharing">Sharing settings</string>
    <string name="jogmap_title">Jogmap upload code</string>
    <string name="jogmap_summary">The authentication code to upload to a jogmap.de account</string>
    <string name="jogrunner_message">Please enter the Zugangskey obtained from http://www.jogmap.de/civic4/?q=mobilinfo.\n </string>
    <string name="preference_logging">Logging and GPS</string>
    <string name="customprecisiontime_title">Target waypoint time interval in minutes</string>
    <string name="customprecisiontime_summary">The time the GPS receiver should sleep between waypoints.</string>
    <string name="customprecisiondistance_title">Target waypoint distance in meters</string>
    <string name="customprecisiondistance_summary">The distance that should be covered between waypoints.</string>
    <string name="gpsstatusmonitor_title">Monitor GPS status</string>
    <string name="gpsstatusmonitor_summary">Displays the number of satellites used and sounds alarm on poor signal.</string>
    <string name="osmvisibility_title">The public visibility of GPS traces on openstreetmap.org</string>
    <string name="osmvisibility_summary">Please consult the openstreetmap.org wiki for more information about the visibility levels.</string>
    <string name="sddirectory_title">SD-Card directory used to store shared tracks.</string>
    <string name="sddirectory_summary">Created track and media files are stored in this SD-Card directory.</string>
    <string name="sddirectory_message">Enter the path added to the SD-Card path to use for files. For instance the default /OpenGPSTracker/ will add a single directory to the SD-Card and /Apps/OpenGPSTracker/ will nest the two.\n </string>
    <string name="preference_stream">Location broadcasting settings</string>
    <string name="streamenabled_title">Streaming enabled</string>
    <string name="streamenabled_summary">Enable direct broadcasting of location</string>
    <string name="streambroadcast_time_title">Minimum time between broadcasts</string>
    <string name="streambroadcast_time_summary">Number of minutes after which new progress is broadcasted</string>
    <string name="streambroadcast_distance_title">Minimum distance between broadcasts</string>
    <string name="streambroadcast_distance_summary">Number of miles or kilometers after which new progress is broadcasted</string>
    <string name="voiceover_title">Stream to audio voice-over</string>
    <string name="voiceover_summary">Each progress broadcast gets a spoken summary</string>
    <string name="customupload_title">Stream to custom web server</string>
    <string name="customupload_summary">Upload track progress to (personal) web server</string>
    <string name="customupload_url_title">Custom web server URL</string>
    <string name="customupload_url_summary">The web address to which to upload progress</string>
    <string name="customupload_url_message">A HTTP GET requests is send for each stream broadcast. This URL is used for that request. 
        In this URL the placeholders are replaced with actual information. The possible placeholders are @LAT@, @LON@, @ALT@, @ACC@, @SPEED@, @BEAR@, @TIME@ and @ID@.</string>
    <string name="customupload_backlog_title">On failure keep a backlog</string>
    <string name="customupload_backlog_summary">The queue size of the backlog of requests</string>
    <string name="customupload_backlog_message">Enter the number of requests that are cached in a backlog queue when requests do not reach the custom server URL</string>
</resources>