<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioGroup
            android:id="@+id/google_backgrounds"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/layer_google_regular"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_regular"/>

            <RadioButton
                android:id="@+id/layer_google_satellite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_satellite"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/shared_layers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/layer_speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_speed"/>

            <CheckBox
                android:id="@+id/layer_altitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_altitude"/>

            <CheckBox
                android:id="@+id/layer_distance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_distance"/>

            <CheckBox
                android:id="@+id/layer_compass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_compass"/>

            <CheckBox
                android:id="@+id/layer_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_location"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/google_overlays"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/layer_traffic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/layer_traffic"/>
        </RadioGroup>


    </LinearLayout>
</ScrollView>
