<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_distance" />

            <TextView
                android:id="@+id/stat_distance"
                tools:text="2.72 km" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_overallaveragespeed" />

            <TextView
                android:id="@+id/stat_overallaveragespeed"
                tools:text="3.27 km/h" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_averagespeed" />

            <TextView
                android:id="@+id/stat_averagespeed"
                tools:text="3.27 km/h" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_maximumspeed" />

            <TextView
                android:id="@+id/stat_maximumspeed"
                tools:text="22.50 km/h" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_waypoints" />

            <TextView
                android:id="@+id/stat_waypoints"
                tools:text="269" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_starttime" />

            <nl.sogeti.android.gpstracker.util.DateView
                android:id="@+id/stat_starttime"
                tools:text="15:10 February 29, 2016" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_endtime" />

            <nl.sogeti.android.gpstracker.util.DateView
                android:id="@+id/stat_endtime"
                tools:text="16:00 February 29, 2016" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_elapsedtime" />

            <TextView
                android:id="@+id/stat_elapsedtime"
                tools:text="0h:49m:54s" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingRight="15dp"
                android:text="@string/stat_ascension" />

            <TextView
                android:id="@+id/stat_ascension"
                tools:text="20 meter" />
        </TableRow>

        <nl.sogeti.android.gpstracker.actions.utils.ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <nl.sogeti.android.gpstracker.actions.utils.GraphCanvas
                android:id="@+id/graph_timespeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <nl.sogeti.android.gpstracker.actions.utils.GraphCanvas
                android:id="@+id/graph_distancespeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <nl.sogeti.android.gpstracker.actions.utils.GraphCanvas
                android:id="@+id/graph_timealtitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <nl.sogeti.android.gpstracker.actions.utils.GraphCanvas
                android:id="@+id/graph_distancealtitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </nl.sogeti.android.gpstracker.actions.utils.ViewFlipper>
    </TableLayout>
</LinearLayout>